fix tag spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -316,7 +316,7 @@ section
 
 .tagInnerContainer
   position: absolute
-  left: -9rem
+  left: -8rem
   top: 0
   margin: 0
 
@@ -328,6 +328,11 @@ section
   justify-content: flex-start
   align-items: flex-end
   margin-bottom: -6px
+  margin-block-start: 6px
+  margin-block-end: 0
+  margin-inline-start: 0.5em
+  margin-inline-end: 0
+  padding-inline-start: 0
 
 .tag
   background: $pop
